Testing android communications

--- a/data/Questions.in
+++ b/data/Questions.in
@@ -2,14 +2,15 @@ Nguyên tố nào nhẹ nhất trong bảng tuần hoàn hóa học?
 Ai là người phát minh ra bóng đèn điện?
 Loài động vật nào lớn nhất hiện nay trên Trái Đất?
 Một năm có bao nhiêu tuần?
-Trái Đất quay quanh Mặt Trời mất bao lâu?
+Trái Đất quay quanh Mặt Trời mất bao nhiêu ngày?
 Thủ đô của Thái Lan là gì?
 Sông nào dài nhất Việt Nam?
 Núi nào cao nhất thế giới?
 Châu lục nào có diện tích lớn nhất?
 Việt Nam có bao nhiêu tỉnh và thành phố trực thuộc trung ương (tính đến 2024)?
 Tác phẩm “Truyện Kiều” do ai sáng tác?
-Bà Trưng và Bà Triệu nổi dậy chống quân xâm lược nào?
+Bà Trưng nổi dậy chống quân xâm lược nào?
+Bà Triệu nổi dậy chống quân xâm lược nào?
 Tác phẩm “Lão Hạc” do ai viết?
 Nguyễn Huệ lên ngôi hoàng đế với niên hiệu gì?
 Bác Hồ đọc Tuyên ngôn Độc lập vào năm nào?
